# XPAnalyzer

./: .gitignore  LICENSE  README.md  configs.py  pyproject.toml  tag_transformer_1.pth  test.py  train.py
config/: config_20250509a.py  config_20250509b.py  config_20250509c.py  config_20250509d.py  config_20250509e.py  config_20250509f.py  config_20250510a.py  config_20250510b.py  configs.py
data/: read_moe_ys.py  tag_dataset.py  tag_prepocessing.py
datasets/: tag_weights.json
marking/: mark_tag_mapping.py
model/: tag_transformer.py
testing/: moe_ys_al_test.py  tag_transformer_test.py
training/: tag_transformer_eval.py  tag_transformer_trainer.py  train_tag_transformer.py
utils/: seeds.py  tag_transformer_emb_dist.py  tag_transformer_eval.py  tag_transformer_occlusion.py  tag_transformer_predictor.py  tag_transformer_tsne.py
